# bevy

./: Cargo.toml
.github/workflows/: ci.yml
crates/bevy_ecs/src/: blueprint.rs  lib.rs
crates/bevy_ecs/src/system/commands/: mod.rs
crates/bevy_render/src/: lib.rs
crates/bevy_render/src/camera/: camera.rs
crates/bevy_render/src/view/: window.rs
crates/bevy_text/: Cargo.toml
crates/bevy_text/src/: text2d.rs
crates/bevy_ui/src/: focus.rs  node_bundles.rs
crates/bevy_ui/src/flex/: mod.rs
crates/bevy_ui/src/render/: mod.rs
crates/bevy_ui/src/widget/: text.rs
crates/bevy_window/: Cargo.toml
crates/bevy_window/src/: cursor.rs  event.rs  lib.rs  raw_window_handle.rs  system.rs  window.rs
crates/bevy_winit/src/: lib.rs  system.rs  winit_windows.rs
examples/: README.md
examples/3d/: split_screen.rs
examples/ecs/: parallel_query.rs
examples/games/: contributors.rs
examples/input/: mouse_grab.rs
examples/ios/src/: lib.rs
examples/shader/: compute_shader_game_of_life.rs  post_processing.rs
examples/stress_tests/: bevymark.rs  many_buttons.rs  many_cubes.rs  many_foxes.rs  many_lights.rs  many_sprites.rs
examples/tools/: scene_viewer.rs
examples/ui/: text_debug.rs  widgets.rs
examples/window/: low_power.rs  multiple_windows.rs  scale_factor_override.rs  transparent_window.rs  window_settings.rs
tests/window/: minimising.rs  resizing.rs
