[package]
description = "Provides text functionality for Bevy Engine"
edition = "2021"
homepage = "https://bevyengine.org"
keywords = ["bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_text"
repository = "https://github.com/bevyengine/bevy"
version = "0.9.0-dev"

[features]
subpixel_glyph_atlas = []

[dependencies]
# bevy
bevy_app = {path = "../bevy_app", version = "0.9.0-dev"}
bevy_asset = {path = "../bevy_asset", version = "0.9.0-dev"}
bevy_ecs = {path = "../bevy_ecs", version = "0.9.0-dev"}
bevy_log = {path = "../bevy_log", version = "0.9.0-dev"}
bevy_math = {path = "../bevy_math", version = "0.9.0-dev"}
bevy_reflect = {path = "../bevy_reflect", version = "0.9.0-dev", features = ["bevy"]}
bevy_render = {path = "../bevy_render", version = "0.9.0-dev"}
bevy_sprite = {path = "../bevy_sprite", version = "0.9.0-dev"}
bevy_transform = {path = "../bevy_transform", version = "0.9.0-dev"}
bevy_utils = {path = "../bevy_utils", version = "0.9.0-dev"}
bevy_window = {path = "../bevy_window", version = "0.9.0-dev"}

# other
ab_glyph = "0.2.6"
anyhow = "1.0.4"
glyph_brush_layout = "0.2.1"
serde = {version = "1", features = ["derive"]}
thiserror = "1.0"
