[package]
description = "Provides windowing functionality for Bevy Engine"
edition = "2021"
homepage = "https://bevyengine.org"
keywords = ["bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_window"
repository = "https://github.com/bevyengine/bevy"
version = "0.9.0-dev"

[dependencies]
# bevy
bevy_app = {path = "../bevy_app", version = "0.9.0-dev"}
bevy_ecs = {path = "../bevy_ecs", version = "0.9.0-dev"}
bevy_math = {path = "../bevy_math", version = "0.9.0-dev"}
bevy_reflect = {path = "../bevy_reflect", version = "0.9.0-dev"}
bevy_utils = {path = "../bevy_utils", version = "0.9.0-dev"}
# Used for close_on_esc
bevy_input = {path = "../bevy_input", version = "0.9.0-dev"}
raw-window-handle = "0.4.2"

# other

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3"
